--- a/libs/AlexaAndroid/src/main/res/layout/act_showweb.xml
+++ b/libs/AlexaAndroid/src/main/res/layout/act_showweb.xml
@@ -6,6 +6,7 @@
 
     <!--   遮罩层 -->
     <RelativeLayout
+        android:id="@+id/rl_auto_auth"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#000000">
@@ -18,6 +19,16 @@
             android:layout_marginEnd="10dp"
             android:text="Authorizing..."
             android:textSize="30sp" />
+
+        <Button
+            android:id="@+id/btn_manual_authorization"
+            style="?android:attr/buttonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_auth"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="20dp"
+            android:text="Manual Authorization" />
 
         <ProgressBar
             android:id="@+id/pb_auth"
